chore: 現行のRedmine導入機能を基準化する
